--- a/style.css
+++ b/style.css
@@ -27,3 +27,38 @@
     top: 0;
     left: -100px;
 }
+
+.container {
+    margin: 0 auto;
+    width: 1140px;
+}
+.block_img {
+    padding: 10px;
+    display: grid;
+    height: 100vh;
+    grid-gap: 10px;
+    grid-template-areas: 
+    "box1 box2 box3 box4"
+    "box1 box5 box5 box4"
+    ;
+}
+.img_box img{
+    border-radius: 30px 0 30px 0;
+    height: 100%;
+    width: 100%;
+}
+.box1 {
+    grid-area: box1;
+}
+.box2 {
+    grid-area: box2;
+}
+.box3 {
+    grid-area: box3;
+}
+.box4 {
+    grid-area: box4;
+}
+.box5 {
+    grid-area: box5;
+}
