--- a/style.css
+++ b/style.css
@@ -47,18 +47,21 @@
     height: 100%;
     width: 100%;
 }
-.box1 {
-    grid-area: box1;
-}
 .box2 {
     grid-area: box2;
 }
 .box3 {
     grid-area: box3;
 }
-.box4 {
-    grid-area: box4;
-}
 .box5 {
     grid-area: box5;
+}
+
+.center{
+	text-align: center;
+	color: white
+}
+
+body{
+	background-color: black;
 }
