--- a/style.css
+++ b/style.css
@@ -59,7 +59,18 @@
 
 .center{
 	text-align: center;
-	color: white
+	
+	color: white;
+	text-shadow:
+	0 0 1px #fff,
+	0 0 2px #fff,
+	0 0 5px #fff,
+	0 0 11px #0fa,
+	0 0 20px #0fa,
+	0 0 30px #0fa,
+	0 0 55px #0fa,
+	0 0 80px #0fa;
+
 }
 
 body{
